Remove unused language file, add license, and refactor configuration and region management